--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: gray;
+  overflow: hidden;
 }
 
 .card-wrapper {
   margin: 5% auto;
-  width: 60%;
-  height: 95%;
+  width: 50%;
+  height: 90%;
   background-color: white;
   border: 1px solid hidden;
-  border-radius: 30px 30px 0 30px;
+  border-radius: 30px;
 }
 
 .card-header {
@@ -58,17 +59,31 @@ body {
 
 .name-contact {
   text-align: center;
+  color:brown;
+  font-size: 18px;
+}
+
+.car-about {
+
 }
 
 .about {
   display: block;
   margin: 0 auto;
   max-width: 50%;
+  max-height: 50%;
   padding-top: 50px;
   text-align: center;
+  font-size: 20px;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 .social {
  text-align: center;
  padding-top: 40px;
+}
+
+.link {
+  display: inline-block;
+  margin: 60px 10px;
 }
