--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
   margin: 0 auto;
   max-width: 260px;
   min-width: 60px;
+  max-height: 260px;
+  min-height: 60px;
 }
 
 .avatar {
@@ -42,8 +44,6 @@ body {
   min-height: 60px;
   max-height: 260px;
   height: 100%;
-  min-width: 60px;
-  max-width: 260px;
   width: 100%;
   border: 10px solid white;
   border-radius: 50%;
@@ -54,27 +54,34 @@ body {
 
 .name-contact {
   text-align: center;
-  color:brown;
+  color: brown;
   font-size: 18px;
+}
+
+.card-about {
+  max-width: 100vw;
+  max-height: 20%;
+  overflow: auto;
 }
 
 .about {
   display: block;
   margin: 0 auto;
   max-width: 50%;
-  max-height: 50%;
+  max-height: 5%;
   padding-top: 50px;
   text-align: center;
   font-size: 20px;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .social {
- text-align: center;
- padding-top: 40px;
+  max-width: 100vw;
+  max-height: 10vh;
+  text-align: center;
+  padding-top: 40px;
 }
 
 .link {
-  display: inline-block;
-  margin: 60px 10px;
+    /* display: inline-block; */
 }
