--- a/style.css
+++ b/style.css
@@ -8,21 +8,23 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: gray;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .card-wrapper {
-  margin: 4% auto;
-  width: 45%;
-  height: 85%;
+  margin: 0 auto;
+  width: 500px;
+  height: 700px;
   background-color: white;
   border: 1px solid hidden;
   border-radius: 30px;
-  overflow: auto;
+  position:relative;
+  top: 12%;  
 }
 
 .card-header {
   background-image: url(./img/bg.jpg);
+  background-color: aqua;
   width: 100%;
   height: 40%;
   background-repeat: no-repeat;
@@ -30,6 +32,10 @@ body {
   background-position: center;
   border: 1px solid hidden;
   border-radius: 30px 30px 0 0;
+}
+
+.card-content {
+  padding: 0 30px;
 }
 
 .card-avatar {
@@ -42,6 +48,7 @@ body {
 
 .avatar {
   display: block;
+  background-color: aqua;
   min-height: 60px;
   max-height: 260px;
   height: 100%;
@@ -62,15 +69,12 @@ body {
 .card-about {
   max-width: 100vw;
   max-height: 20%;
-  overflow: auto;
 }
 
 .about {
   display: block;
-  margin: 0 auto;
-  max-width: 50%;
   max-height: 5%;
-  padding-top: 50px;
+  padding-top: 15px;
   text-align: center;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
@@ -83,7 +87,6 @@ body {
   padding-top: 40px;
 }
 
-
 .link {
-    margin: 5px; 
+  margin: 5px;
 }
